Split main tasks with include_tasks

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -103,101 +103,8 @@
   meta: flush_handlers
   tags: nginx
 
-- name: Create node exporter user
-  user:
-    name: node
-    shell: /sbin/nologin
-    create_home: false
-    system: true
-    state: present
-  tags: node
+- name: Install node exporter
+  include_tasks: node_exporter.yml
 
-- name: Download node exporter
-  get_url:
-    url: "https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz"
-    dest: /home/vagrant
-  tags: node
-
-- name: Unarchive node exporter
-  unarchive:
-    src: "node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz"
-    dest: /home/vagrant
-    remote_src: true
-  tags: node
-
-- name: Copy binary file
-  copy:
-    src: "node_exporter-{{ node_exporter_version }}.linux-amd64/node_exporter"
-    dest: /usr/local/bin
-    owner: node
-    group: node
-    mode: 0755
-    remote_src: true
-  tags: node
-
-- name: Create node_exporter service
-  copy:
-    src: files/node_exporter.service
-    dest: /etc/systemd/system/node_exporter.service
-    owner: root
-    group: root
-    mode: 0644
-  tags: node
-
-- name: Start node exporter service
-  systemd:
-    name: node_exporter
-    state: started
-    enabled: true
-    daemon_reload: true
-  tags: node
-######
-- name: Create nginx exporter user
-  user:
-    name: nginx_exporter
-    shell: /sbin/nologin
-    create_home: false
-    system: true
-    state: present
-  tags: nginx_exporter
-
-- name: Download node exporter
-  get_url:
-    url: "https://github.com/nginxinc/nginx-prometheus-exporter/releases/download/v{{ nginx_exporter_version }}/nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_amd64.tar.gz"
-    dest: /home/vagrant
-  tags: nginx_exporter
-
-- name: Unarchive nginx exporter
-  unarchive:
-    src: "nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_amd64.tar.gz"
-    dest: /home/vagrant
-    remote_src: true
-  tags: nginx_exporter
-
-- name: Copy nginx exporter binary file
-  copy:
-    src: /home/vagrant/nginx-prometheus-exporter
-#    src: "nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_amd64/nginx-prometheus-exporter"
-    dest: /usr/local/bin
-    owner: nginx_exporter
-    group: nginx_exporter
-    mode: 0755
-    remote_src: true
-  tags: nginx_exporter
-
-- name: Create nginx_exporter service
-  copy:
-    src: files/nginx_exporter.service
-    dest: /etc/systemd/system/nginx_exporter.service
-    owner: root
-    group: root
-    mode: 0644
-  tags: nginx_exporter
-
-- name: Start node exporter service
-  systemd:
-    name: nginx_exporter
-    state: started
-    enabled: true
-    daemon_reload: true
-  tags: nginx_exporter
+- name: Install nginx exporter
+  include_tasks: nginx_exporter.yml
