--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -142,51 +142,5 @@
     recurse: true
   tags: wordpress
 
-- name: Create node exporter user
-  user:
-    name: node
-    shell: /sbin/nologin
-    create_home: false
-    system: true
-    state: present
-  tags: node
-
-- name: Download node exporter
-  get_url:
-    url: "https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz"
-    dest: /home/vagrant
-  tags: node
-
-- name: Unarchive node exporter
-  unarchive:
-    src: "node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz"
-    dest: /home/vagrant
-    remote_src: true
-  tags: node
-
-- name: Copy binary file
-  copy:
-    src: "node_exporter-{{ node_exporter_version }}.linux-amd64/node_exporter"
-    dest: /usr/local/bin
-    owner: node
-    group: node
-    mode: 0755
-    remote_src: true
-  tags: node
-
-- name: Create node_exporter service
-  copy:
-    src: files/node_exporter.service
-    dest: /etc/systemd/system/node_exporter.service
-    owner: root
-    group: root
-    mode: 0644
-  tags: node
-
-- name: Start node exporter service
-  systemd:
-    name: node_exporter
-    state: started
-    enabled: true
-    daemon_reload: true
-  tags: node
+- name: Install node exporter
+  include_tasks: node_exporter.yml
