--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -17,6 +17,7 @@ db_mysqld_exporter_user: exporter
 grafana_user: admin
 
 prometheus_version: 2.54.1
+alertmanager_version: 0.27.0
 node_exporter_version: 1.8.2
 mysql_exporter_version: 0.15.1
 nginx_exporter_version: 1.3.0
