alertmanager is configured

--- a/project.yml
+++ b/project.yml
@@ -23,6 +23,7 @@
 - hosts: monitoring
   become: true
   gather_facts: false
+  vars_files: inventory/group_vars/all_vault.yml
   roles:
     - role: monitoring
       tags: monitoring
