--- a/roles/monitoring/handlers/main.yml
+++ b/roles/monitoring/handlers/main.yml
@@ -9,3 +9,8 @@
   systemd:
     name: grafana-server
     state: restarted
+
+- name: Restart alertmanager
+  systemd:
+    name: alertmanager
+    state: restarted
