--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -107,50 +107,11 @@
   meta: flush_handlers
   tags: apache
 
-- name: Download wordpress
-  get_url:
-    url: http://wordpress.org/latest.tar.gz
-    dest: /home/vagrant/latest.tar.gz
-  tags: wordpress
+- name: Configure wordpress
+  import_tasks: wordpress.yml
 
-- name: Unarchive wordpress
-  unarchive:
-    src: /home/vagrant/latest.tar.gz
-    dest: /var/www/html/
-    remote_src: true
-    extra_opts: [--strip-components=1]
-  notify: Reload apache
-  tags: wordpress
+- name: Configure node exporter
+  import_tasks: node_exporter.yml
 
-- name: Copy wordpress config
-  template:
-    src: templates/wp-config.php.j2
-    dest: /var/www/html/wp-config.php
-    owner: www-data
-    group: www-data
-    mode: 0755
-  notify: Reload apache
-  tags: wordpress
-
-- name: Copy functions.php
-  copy:
-    src: files/functions.php
-    dest: /var/www/html/wp-content/themes/twentytwentyfour/functions.php
-    owner: www-data
-    group: www-data
-    mode: 0755
-  notify: Reload apache
-  tags: wordpress
-
-- name: Change www owner
-  file:
-    path: /var/www/html
-    state: directory
-    owner: www-data
-    group: www-data
-    mode: 0755
-    recurse: true
-  tags: wordpress
-
-- name: Install node exporter
-  include_tasks: node_exporter.yml
+- name: Configure iptables
+  import_tasks: iptables.yml
