--- a/roles/frontend/handlers/main.yml
+++ b/roles/frontend/handlers/main.yml
@@ -31,3 +31,8 @@
   systemd:
     name: nginx
     state: reloaded
+
+- name: Restart filebeat
+  systemd:
+    name: filebeat
+    state: restarted
