--- a/roles/monitoring/files/alert.rules.yml
+++ b/roles/monitoring/files/alert.rules.yml
@@ -3,7 +3,7 @@ groups:
   rules:
   - alert: InstanceDown
     expr: up == 0
-    for: 1m
+    for: 15s
     labels:
       severity: "critical"
     annotations:
