--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,4 +5,5 @@ host_key_checking = False
 retry_files_enabled = False
 interpreter_python=auto_silent
 stdout_callback = debug
+callback_whitelist = profile_tasks
 vault_password_file = vault.password
